--- a/views/layouts/root.pug
+++ b/views/layouts/root.pug
@@ -7,8 +7,4 @@ html(lang="en")
     link(rel='stylesheet', href='/stylesheets/style.css')
   
   body
-    include components/navbar.pug
-    // show/hide by clicking hamburger
-    include components/sidebar.pug
-
-  block page
+    block content
