--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -1,9 +1,9 @@
-extends layout
-include components/blogCard.pug
+extends ../layouts/browser
+include ../components/blogCard
 
 block page
   .blogCardGroup
-    +blogCard
-    +blogCard
-    +blogCard
-    +blogCard
+    //- +blogCard
+    //- +blogCard
+    //- +blogCard
+    //- +blogCard
