Fixed sass precompiler

--- a/views/components/accountSidebar.pug
+++ b/views/components/accountSidebar.pug
@@ -8,10 +8,10 @@ include actionItem
         li
             actionItem(
                 'Your Profile', 
-                '../../public/images/profileIcon.png'
+                '/images/profileIcon.png'
             )
         li
             actionItem(
                 'Logout', 
-                '../../public/images/logoutIcon.png'
+                '/images/logoutIcon.png'
             )
