--- a/views/components/authorNavbar.pug
+++ b/views/components/authorNavbar.pug
@@ -8,6 +8,6 @@ include siteIcon
         button.publish
         button.account
             img.avatar(
-                src='/public/images/profileIcon.png'
+                src='/images/profileIcon.png'
             ) 
     
