--- a/views/components/contentSidebar.pug
+++ b/views/components/contentSidebar.pug
@@ -18,10 +18,10 @@ include actionItem
             li
                 actionItem(
                     'Blog 1', 
-                    '../../public/images/profileIcon.png'
+                    '/images/profileIcon.png'
                 )
             li
                 actionItem(
                     'Blog 2', 
-                    '../../public/images/profileIcon.png'
+                    '/images/profileIcon.png'
                 )
