--- a/views/components/siteIcon.pug
+++ b/views/components/siteIcon.pug
@@ -1,4 +1,4 @@
 mixin siteIcon 
     a(href='/')
         .iconMedium
-            img(src='../../public/images/siteIcon.png')
+            img(src='/images/favicon.png')
