--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,4 +1,14 @@
+@use 'components/account-sidebar';
+@use 'components/content-sidebar';
+@use 'components/action-item';
+@use 'components/author-navbar';
+@use 'components/browser-navbar';
+@use 'components/blog-card';
 @use 'globals/colors';
+@use 'layouts/author';
+@use 'layouts/browser';
+@use 'pages/index';
+
 
 * {
   box-sizing: border-box;
