--- a/views/layouts/root.pug
+++ b/views/layouts/root.pug
@@ -4,6 +4,7 @@ html(lang="en")
     title= title
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1')
+    link(rel='icon' type='image/x-icon' href='/images/favicon.png')
     link(rel='stylesheet', href='/stylesheets/style.css')
   
   body
