--- a/views/components/siteIcon.pug
+++ b/views/components/siteIcon.pug
@@ -1,4 +1,4 @@
 mixin siteIcon 
-    a(href='/')
-        .iconMedium
+    a.site-link(href='/')
+        .site-link__img
             img(src='/images/favicon.png')
