--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -2,8 +2,13 @@ extends ../layouts/browser
 include ../components/blogCard
 
 block page
-  .blogCardGroup
-    //- +blogCard
-    //- +blogCard
-    //- +blogCard
-    //- +blogCard
+  .blog-card-group
+    each blogCommentCountPair, index in blogCommentCountPairs
+      //only display up to 4 most popular blogs
+      if index == 4
+        break
+      
+      +blogCard(
+        blogCommentCountPairs[0],
+        blogCommentCountPairs[1]
+      )
