--- a/views/layouts/root.pug
+++ b/views/layouts/root.pug
@@ -4,6 +4,10 @@ html(lang="en")
     title= title
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1')
+    meta(
+      name='description' 
+      content='A place for reading blogs by coders and tech enthusiasts.'
+    )
     link(rel='icon' type='image/x-icon' href='/images/favicon.png')
     link(rel='stylesheet', href='/stylesheets/style.css')
   
