--- a/views/components/actionList.pug
+++ b/views/components/actionList.pug
@@ -7,6 +7,6 @@ mixin actionList(...actionItems)
 mixin actionItem(label, icon)
     li.action-list__item
         button.action-list__button
-            .action_list__icon
+            .icon-medium
                 img(src=icon)
             .action-list__label= label
