--- a/public/stylesheets/components/_account-sidebar.scss
+++ b/public/stylesheets/components/_account-sidebar.scss
@@ -1,3 +1,9 @@
-.sidebar {
-    
+@use '../globals/colors';
+
+.account-sidebar {
+    right: 0;
+
+    &__signup-prompt {
+        height: 50%;
+    }
 }
