--- a/public/stylesheets/globals/_colors.scss
+++ b/public/stylesheets/globals/_colors.scss
@@ -1,9 +1,10 @@
 $bg0: black;
-$bg1: rgb(44, 44, 44);
-$bg2: rgb(77, 77, 77);
-$text0: rgb(196, 196, 196);
-$border: rgb(143, 143, 143);
+$bg1: rgb(36, 36, 36);
+$bg2: rgb(54, 54, 54);
+$bg3: rgb(72, 72, 72);
+$bg4: rgb(141, 141, 141);
+$text0: white;
+$text1: black;
 $link: #646cff;
-$linkHover: #b027ff;
-$button: #b027ff;
-$buttonHover: #d48aff;
+$linkHover: #b22eff;
+$button: #b22eff;
