--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,18 +1,121 @@
-.navbar {
+.account-sidebar {
+  right: 0;
+}
+.account-sidebar__signup-prompt {
+  height: 50%;
+}
+
+.action-list {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  position: sticky;
-  top: 0;
-  padding: 1rem;
-  height: 8vh;
+  flex-direction: column;
+  gap: 1rem;
+}
+.action-list__button {
+  display: flex;
+  gap: 1rem;
   width: 100%;
+  border: none;
+  background-color: rgb(72, 72, 72);
+  border-radius: 10px;
+}
+
+.content-sidebar {
+  left: 0;
+}
+.content-sidebar__section-heading {
+  margin-bottom: 1rem;
+  font-size: 1.2rem;
+  font-weight: 600;
+  border-bottom: 2px solid rgb(72, 72, 72);
+}
+.content-sidebar__section-body {
+  margin-bottom: 1rem;
+}
+.content-sidebar__section-body button {
+  font-size: 0.8rem;
 }
 
 .searchbar {
   display: flex;
   align-items: flex-end;
-  background-color: rgb(44, 44, 44);
+  gap: 10px;
+  padding-bottom: 0.2rem;
+  padding-top: 0.2rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  border-radius: 25px;
+  background-color: rgb(141, 141, 141);
+}
+.searchbar__form {
+  width: 100%;
+}
+.searchbar__input {
+  width: 100%;
+  font-size: 1.2rem;
+  background: none;
+  border: none;
+  color: white;
+}
+.searchbar__input:focus {
+  outline: none;
+}
+
+.site-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+  font-size: 1.2rem;
+}
+
+.navbar {
+  display: flex;
+  align-items: center;
+  position: sticky;
+  top: 0;
+  padding: 1rem;
+  height: 8vh;
+  z-index: 1;
+  background-color: black;
+}
+.navbar__left {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+}
+.navbar__center {
+  flex: 2;
+}
+.navbar__right {
+  flex: 1;
+  display: flex;
+  justify-content: flex-end;
+}
+.navbar__burger-button {
+  padding-top: 0.2rem;
+  padding-bottom: 0.2rem;
+  padding-left: 0.4rem;
+  padding-right: 0.4rem;
+}
+
+.page-container {
+  position: relative;
+  margin: 0;
+  min-height: 100vh;
+}
+
+.sidebar {
+  position: absolute;
+  height: 100%;
+  width: 25%;
+  padding: 1rem;
+  background-color: rgb(54, 54, 54);
+  border: 4px solid rgb(72, 72, 72);
+}
+.sidebar__exit {
+  display: flex;
+  justify-content: flex-end;
 }
 
 * {
@@ -22,8 +125,7 @@
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   font-weight: 400;
-  background-color: black;
-  color: rgb(196, 196, 196);
+  color: white;
 }
 
 a {
@@ -31,21 +133,30 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
+
 a:hover {
-  color: #b027ff;
+  color: #b22eff;
 }
 
 body {
   margin: 0;
   min-height: 100vh;
+  background-color: rgb(36, 36, 36);
 }
 
 button {
-  background-color: #b027ff;
-  border: none;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  color: #b22eff;
+  border: 3px solid #b22eff;
+  background: none;
+  font-size: 1.2rem;
 }
 button:hover {
-  background-color: #d48aff;
+  color: white;
+  background-color: #b22eff;
 }
 
 h1, h2 {
@@ -60,19 +171,36 @@ h2 {
   font-size: 1.5rem;
 }
 
+img {
+  height: 100%;
+  width: 100%;
+}
+
 ul, ol {
   list-style-type: none;
   padding-left: 0;
+  margin: 0;
 }
 
-.iconSmall {
-  width: 1rem;
-  height: 1rem;
+.avatar {
+  border-radius: 50%;
 }
 
-.iconMedium {
-  width: 2rem;
+.icon-small {
+  height: 1.5rem;
+  width: 1.5rem;
+}
+
+.icon-medium {
   height: 2rem;
+  width: 2rem;
 }
 
-/*# sourceMappingURL=style.css.map */
+.signup-prompt {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  font-size: 1.2rem;
+}
