--- a/views/components/blogCard.pug
+++ b/views/components/blogCard.pug
@@ -1,6 +1,6 @@
 include statList
 
-mixin blogCard(blog, commentCount)
+mixin blogCard(blog)
   .blog-card
     +statList(
       {
@@ -17,7 +17,8 @@ mixin blogCard(blog, commentCount)
       }
     )
     .blog-card__overview
-      .blog-card__author= blog.author.name
+      .blog-card__author= blog.author
       .blog-card__title= blog.title
       // Blog preview; show first 100 chars of non-heading text
-      .blog-card__preview= blog.content[0].content.substring(0, 100) + '...'
+      // [0].content.substring(0, 100) + '...'
+      .blog-card__preview= blog.content
