--- a/views/components/siteLink.pug
+++ b/views/components/siteLink.pug
@@ -1,4 +1,4 @@
 a.site-link(href='/')
-    .site-icon.icon-medium
+    .site-icon
         img(src='/images/favicon.png')  
     .site-name Tech Stack
