--- a/public/stylesheets/components/_action-list.scss
+++ b/public/stylesheets/components/_action-list.scss
@@ -1,5 +1,6 @@
 @use '../globals/colors';
 @use '../globals/font-sizes' as fSizes;
+@use '../globals/icon-sizes' as iSizes;
 
 .action-list {
     display: flex;
@@ -13,6 +14,11 @@
         border: none;
         background-color: colors.$bg3;
         border-radius: 10px;
+    }
+
+    &__icon {
+        height: iSizes.$medium;
+        width: iSizes.$medium;
     }
 }
 
