--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -7,6 +7,7 @@
 @use 'components/stat-list';
 @use 'globals/colors';
 @use 'globals/font-sizes' as fSizes;
+@use 'globals/icon-sizes' as iSizes;
 @use 'layouts/author';
 @use 'layouts/browser';
 @use 'layouts/toolbars';
@@ -82,14 +83,31 @@ ul, ol {
   border-radius: 50%;
 }
 
-.icon-small {
-  height: 1.5rem;
-  width: 1.5rem;
+.account-button {
+  &__icon {
+    height: iSizes.$medium;
+    width: iSizes.$medium;
+  }
 }
 
-.icon-medium {
-  height: 2rem;
-  width: 2rem;
+.burger-button {
+  padding-top: 0.2rem;
+  padding-bottom: 0.2rem;
+  padding-left: 0.4rem;
+  padding-right: 0.4rem;
+
+  &__icon {
+    height: iSizes.$medium;
+    width: iSizes.$medium;
+  }
+}
+
+.write-button {
+  &__icon {
+    height: iSizes.$small;
+    width: iSizes.$small;
+  }
+  
 }
 
 .signup-prompt {
@@ -99,4 +117,9 @@ ul, ol {
   align-items: center;
   gap: 1rem;
   font-size: fSizes.$large;
+}
+
+.site-icon {
+  height: iSizes.$medium;
+  width: iSizes.$medium;
 }
