--- a/views/components/searchbar.pug
+++ b/views/components/searchbar.pug
@@ -1,5 +1,5 @@
 .searchbar
-    .searchbar__icon.icon-small
+    .searchbar__icon
         img(src='/images/searchIcon.png')
     form.searchbar__form
         input.searchbar__input(
