--- a/public/stylesheets/components/_content-sidebar.scss
+++ b/public/stylesheets/components/_content-sidebar.scss
@@ -3,19 +3,20 @@
 
 .content-sidebar {
     left: 0;
+    border-right: 2px solid colors.$bg2;
 
-    &__section-heading {
+    &__heading {
         margin-bottom: 1rem;
         font-size: fSizes.$large;
         font-weight: 600;
-        border-bottom: 2px solid colors.$bg3;
+        border-bottom: 2px solid colors.$bg2;
     }
 
-    &__section-body {
+    &__section {
         margin-bottom: 1rem;
     }
 
-    &__section-body button {
+    &__section button {
         font-size: fSizes.$small;
     }
 }
