--- a/public/stylesheets/globals/_colors.scss
+++ b/public/stylesheets/globals/_colors.scss
@@ -1,10 +1,13 @@
+// some of bg are used as borders; consider renaming
 $bg0: black;
-$bg1: rgb(36, 36, 36);
-$bg2: rgb(54, 54, 54);
-$bg3: rgb(72, 72, 72);
-$bg4: rgb(141, 141, 141);
-$text0: white;
-$text1: black;
+$bg1: rgb(18, 18, 18);
+$bg2: rgb(36, 36, 36);
+$bg3: rgb(54, 54, 54);
+$bg4: rgb(72, 72, 72);
+$textLight: white;
 $link: #646cff;
 $linkHover: #b22eff;
-$button: #b22eff;
+$button: $bg3;
+$buttonHover: $bg3;
+$buttonColorful: #b22eff;
+$buttonColorfulHover: #b22eff;
