--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,6 @@
 .account-sidebar {
   right: 0;
+  border-left: 2px solid rgb(36, 36, 36);
 }
 .account-sidebar__signup-prompt {
   height: 50%;
@@ -15,24 +16,61 @@
   gap: 1rem;
   width: 100%;
   border: none;
-  background-color: rgb(72, 72, 72);
+  background-color: rgb(54, 54, 54);
   border-radius: 10px;
+}
+.action-list__icon {
+  height: 2rem;
+  width: 2rem;
 }
 
 .content-sidebar {
   left: 0;
+  border-right: 2px solid rgb(36, 36, 36);
 }
-.content-sidebar__section-heading {
+.content-sidebar__heading {
   margin-bottom: 1rem;
   font-size: 1.2rem;
   font-weight: 600;
-  border-bottom: 2px solid rgb(72, 72, 72);
+  border-bottom: 2px solid rgb(36, 36, 36);
 }
-.content-sidebar__section-body {
+.content-sidebar__section {
   margin-bottom: 1rem;
 }
-.content-sidebar__section-body button {
+.content-sidebar__section button {
   font-size: 0.8rem;
+}
+
+.icon-button {
+  padding-top: 0.1rem;
+  padding-bottom: 0.1rem;
+  padding-left: 0.1rem;
+  padding-right: 0.1rem;
+}
+.icon-button__icon {
+  height: 2rem;
+  width: 2rem;
+}
+.icon-button.-circle {
+  border-radius: 50%;
+}
+.icon-button.-burger {
+  padding-top: 0.2rem;
+  padding-bottom: 0.2rem;
+  padding-left: 0.4rem;
+  padding-right: 0.4rem;
+}
+
+.icon-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+  font-size: 1.2rem;
+}
+.icon-link__icon {
+  height: 2rem;
+  width: 2rem;
 }
 
 .searchbar {
@@ -44,7 +82,10 @@
   padding-left: 1rem;
   padding-right: 1rem;
   border-radius: 25px;
-  background-color: rgb(141, 141, 141);
+  background-color: rgb(54, 54, 54);
+}
+.searchbar__icon {
+  height: 1.5rem;
 }
 .searchbar__form {
   width: 100%;
@@ -56,17 +97,6 @@
   border: none;
   color: white;
 }
-.searchbar__input:focus {
-  outline: none;
-}
-
-.site-link {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 0.5rem;
-  font-size: 1.2rem;
-}
 
 .navbar {
   display: flex;
@@ -75,7 +105,9 @@
   top: 0;
   padding: 1rem;
   height: 8vh;
+  min-height: 4rem;
   z-index: 1;
+  border-bottom: 2px solid rgb(36, 36, 36);
   background-color: black;
 }
 .navbar__left {
@@ -92,30 +124,27 @@
   display: flex;
   justify-content: flex-end;
 }
-.navbar__burger-button {
-  padding-top: 0.2rem;
-  padding-bottom: 0.2rem;
-  padding-left: 0.4rem;
-  padding-right: 0.4rem;
-}
 
 .page-container {
-  position: relative;
   margin: 0;
   min-height: 100vh;
 }
 
 .sidebar {
-  position: absolute;
+  position: fixed;
   height: 100%;
   width: 25%;
   padding: 1rem;
-  background-color: rgb(54, 54, 54);
-  border: 4px solid rgb(72, 72, 72);
+  background-color: black;
+  border-bottom: 2px solid rgb(36, 36, 36);
 }
-.sidebar__exit {
+.sidebar__top {
   display: flex;
   justify-content: flex-end;
+}
+.sidebar__exit-icon {
+  height: 2rem;
+  width: 2rem;
 }
 
 * {
@@ -133,30 +162,44 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
-
 a:hover {
   color: #b22eff;
+}
+a.-button {
+  padding-top: 0.2rem;
+  padding-bottom: 0.2rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  color: #b22eff;
+  border: 2px solid #b22eff;
+  border-radius: 5px;
+  background: none;
+  font-size: 1.2rem;
+}
+a.-button:hover {
+  color: white;
+  background-color: #b22eff;
 }
 
 body {
   margin: 0;
   min-height: 100vh;
-  background-color: rgb(36, 36, 36);
+  background-color: rgb(18, 18, 18);
 }
 
 button {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-  padding-left: 2rem;
-  padding-right: 2rem;
-  color: #b22eff;
-  border: 3px solid #b22eff;
+  padding-top: 0.2rem;
+  padding-bottom: 0.2rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  color: white;
+  border: 2px solid rgb(54, 54, 54);
+  border-radius: 5px;
   background: none;
-  font-size: 1.2rem;
+  font-size: 1rem;
 }
 button:hover {
-  color: white;
-  background-color: #b22eff;
+  background-color: rgb(54, 54, 54);
 }
 
 h1, h2 {
@@ -180,20 +223,6 @@ ul, ol {
   list-style-type: none;
   padding-left: 0;
   margin: 0;
-}
-
-.avatar {
-  border-radius: 50%;
-}
-
-.icon-small {
-  height: 1.5rem;
-  width: 1.5rem;
-}
-
-.icon-medium {
-  height: 2rem;
-  width: 2rem;
 }
 
 .signup-prompt {
