--- a/views/components/actionList.pug
+++ b/views/components/actionList.pug
@@ -1,12 +1,9 @@
+include iconLink
+
 mixin actionList(...actionItems)
-    ul.action-list
+    ul.action-list&attributes(attributes.actionList)
         each item in actionItems
-            +actionItem(item.label, item.icon)
-
-
-mixin actionItem(label, icon)
-    li.action-list__item
-        button.action-list__button
-            .action-list__icon
-                img(src=icon)
-            .action-list__label= label
+            li.action-list__item
+                +iconLink(
+                    item.icon, item.href, item.label
+                )(class=attributes.iconLink)
