--- a/views/layouts/root.pug
+++ b/views/layouts/root.pug
@@ -10,6 +10,7 @@ html(lang="en")
     )
     link(rel='icon' type='image/x-icon' href='/images/favicon.png')
     link(rel='stylesheet', href='/stylesheets/style.css')
+    script(defer src='/javascripts/root.js')
   
   body
     block content
