--- a/views/pages/userProfile.pug
+++ b/views/pages/userProfile.pug
@@ -1,11 +1,43 @@
-extends ../layouts/browser 
+extends ../layouts/browser
+include ../components/actionList
 
-block page 
-    .avatar 
-    // username
-    // profile pic
-    // self-descrip
+block page
+    .profile 
+        .profile__user-details
+            .profile__avatar.avatar
+                img(src='/images/profileIcon.png')
+            .profile__username= user.username
+            .profile__bio
+                .profile__heading Bio 
+                p.profile__section
+            .profile__favorite-topics
+            .profile__edit-button 
 
-    // preferred tech topics (keywords?)
-    // most recent reads
-    // author? -> show most popular blogs
+        .profile__browser-details
+            .profile__heading Recent Reads
+            .profile__section
+                +actionList(
+                    {
+                        'label': 'Blog 1',
+                        'icon': '/images/profileIcon.png'
+                    },
+                    {
+                        'label': 'Blog 2',
+                        'icon': '/images/profileIcon.png'
+                    }
+                )
+
+        if userBlogs
+            .profile__author-details
+                .profile__heading Blogs Written by #{user.username}
+                .profile__section
+                    +actionList(
+                        {
+                            'label': 'Blog 1',
+                            'icon': '/images/profileIcon.png'
+                        },
+                        {
+                            'label': 'Blog 2',
+                            'icon': '/images/profileIcon.png'
+                        }
+                    )
